# noisy-fed

./: .gitignore  main.py  pyproject.toml
fedcorr/: main.py  main_e.py
fedcorr/model/: build_model.py
fedcorr/util/: dataset.py  local_training.py  options.py  plots.py  util.py
fine/: build_model.py  configs.py  dataset.py  fine_detect.py  finesvd_classifier.py  fl.py  gmm.py  loss.py  main.py  main_fl.py  metrics.py  noise.py  pipeline.py  plots.py  relabel.py  run.py  sampling.py  trainer.py
fine/dataset/: cutmix.py  dataset.py  noise.py
fine/strategy/: baseline_strategy.py  eig_strategy.py  fit_gmm.py  jal_strategy.py  pruning_strategy.py
fine/temp/: finesvd_classifier.py  gmm.py  main.py  pipeline.py  similarity.py
fine/utils/: comparison_plots.py  metrics.py  plots.py  plots_fl.py  set_seed.py
util/: dataset.py  local_training.py  options.py  util.py
